[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-lexer"
version = "0.1.0"
description = "Pygments lexer for the Vehicle language"
dependencies = [
    "pygments",
]

[project.entry-points."pygments.lexers"]
vehicle = "vehicle_lexer:VehicleLexer"